--- a/css/menu-styles/highlight-styles.css
+++ b/css/menu-styles/highlight-styles.css
@@ -9,6 +9,15 @@
 .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
     color:#656565;
     padding: 0.5rem 10px 0 10px;
+    margin-bottom: 0;
+    border-bottom: 1px solid transparent;
+}
+
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link:hover,
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link:active {
+  border-bottom: 1px solid #000;
+  background-color: transparent;
+  box-shadow: none;
 }
 
 .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link:hover,
@@ -19,7 +28,6 @@
 
 .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link:hover::after,
 .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link:active::after {
-    border-top:1px solid #333;
     left:10px;
     right:10px;
     content:" ";
@@ -43,7 +51,6 @@ section.ucb-main-nav-section {
   font-weight: 600;
   border-bottom: 0px;
   border-top: 1px solid transparent;
-  margin-top: -1px;
 }
 
 .ucb-main-menu li.menu-item a.nav-link:hover,
@@ -74,4 +81,16 @@ section.ucb-main-nav-section {
 .ucb-button-none.ucb-main-nav-continer.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link:hover {
   color: #222;
   background: #f2f2f2;
+}
+.ucb-header-light .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+  background: #eee;
+}
+.ucb-header-white .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+  background: #fff;
+}
+.ucb-header-dark .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+  background: #424242;
+}
+.ucb-header-black .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+  background: #000;
 }
