--- a/css/menu-styles/modern-styles.css
+++ b/css/menu-styles/modern-styles.css
@@ -18,12 +18,15 @@
   background-color: #000;
 }
 
-
-.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
+.ucb-header-black .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
+.ucb-header-dark .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
   color:#fff;
-  padding: 0.5rem 10px 0 10px;
 }
 
+.ucb-header-light .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
+.ucb-header-white .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
+  color:#000;
+}
 .ucb-main-nav-section {
   border-bottom: 5px solid #cfb87c;
 }
