--- a/css/ucb-secondary-menu-region.css
+++ b/css/ucb-secondary-menu-region.css
@@ -46,32 +46,7 @@
   margin: 0;
   padding: .5rem 0;
 }
-
-.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a:hover {
-  color: var(--ucb-gold);
-  background-color: transparent;
-}
-
-.ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .menu-item a {
-  border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-  transition: box-shadow .5s ease, background-color .5s;
-  margin: .5rem 0;
-  padding: .3rem .9rem;
-}
-
-.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container, .ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container, 
+.ucb-main-nav-continer.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
   gap: .5rem;
-}
-
-.ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .menu-item a:hover {
-  color: #000000;
-  background-color: #a6a6a6;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
-}
-
-.ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .menu-item a:active, .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .menu-item a:focus {
-  color: #000000;
-  background-color: #a6a6a6;
-  box-shadow: 0 3px 15px rgba(0, 0, 0, .35);
 }
